// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TVL slice tests should update state on fulfilled gov vault contract data 1`] = `
Object {
  "byBoostId": Object {},
  "byVaultId": Object {
    "bifi-gov": "3.83973164e-12",
  },
  "exclusions": Object {},
  "totalTvl": "3.83973164e-12",
}
`;

exports[`TVL slice tests should update state on fulfilled standard vault contract data 1`] = `
Object {
  "byBoostId": Object {},
  "byVaultId": Object {},
  "exclusions": Object {},
  "totalTvl": "0",
}
`;
